fixed - contact form buttons spacing

--- a/src/components/contact/contact.styl
+++ b/src/components/contact/contact.styl
@@ -54,6 +54,7 @@
     font-size rem(14)
     padding 0.5rem 1.5rem
     text-transform uppercase
+    margin-right 0.25rem
 
   &__fb
     text-align right
